kubernetes-config/facebox.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emojify-facebox
  labels:
    app: emojify-facebox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: emojify-facebox
  template:
    metadata:
      labels:
        app: emojify-facebox
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/service-name": "emojify-facebox"
        "consul.hashicorp.com/connect-service-port": "8080"
    spec:
      containers:
      - name: emojify-facebox
        image: "machinebox/facebox"
        resources:
          limits:
            cpu: 1000m
            memory: 200Mi
          requests:
            cpu: 1000m
            memory: 200Mi
