kubernetes-config/api-with-payment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: emojify-api
  labels:
    app: emojify-api
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: http
  selector:
    app: emojify-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emojify-api
  labels:
    app: emojify-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emojify-api
  template:
    metadata:
      labels:
        app: emojify-api
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service-upstreams": "emojify-facebox:8003,payment:8004"
        "consul.hashicorp.com/connect-service-port": "9090"
    spec:
      containers:
      - name: emojify-api
        image: "nicholasjackson/emojify-api:latest"
        imagePullPolicy: Always
        command: ["/service/emojify-api"]
        args: [
          "-allow-origin=demo.hashicorp.fun",
          "-authn-disable=true",
          "-bind-address=0.0.0.0:9090",
          "-payment-address=http://localhost:8004",
          "-path=/api/"
        ]
        ports:
        - containerPort: 9090
