kubernetes-config/website-with-payment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: emojify-website
  labels:
    app: emojify-website
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: emojify-website

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emojify-website
  labels:
    app: emojify-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emojify-website
  template:
    metadata:
      annotations:
        "consul.hashicorp.com/service-name": "emojify-website"
        "consul.hashicorp.com/connect-service-port": "5000"
        "consul.hashicorp.com/connect-inject": "true"
      labels:
        app: emojify-website
    spec:
      volumes:
      - name: config
        configMap:
          name: emojify-web-configmap
          items:
          - key: config
            path: env.js
      containers:
      - name: emojify-website
        image: "nicholasjackson/emojify-website:0.5.8"
        imagePullPolicy: Always
        command: ["serve"]
        args: ["-s", "build"]
        ports:
        - containerPort: 5000

        volumeMounts:
        - name: config
          mountPath: /app/build/config/
          readOnly: true
