kubernetes-config/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - demo.hashicorp.fun
    secretName: tls-secret
  rules:
  - host: demo.hashicorp.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: emojify-website
          servicePort: 5000
      - path: /api
        backend:
          serviceName: emojify-api
          servicePort: 9090
